--- a/dapp/package.json
+++ b/dapp/package.json
@@ -10,13 +10,12 @@
   "dependencies": {
     "@toruslabs/torus-embed": "^0.2.12",
     "core-js": "^3.4.4",
-    "ethers": "^4.0.44",
     "fast-deep-equal": "^3.1.1",
     "maticjs": "^1.0.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.5",
     "vuetify": "^2.1.0",
-    "web3": "^1.0.0-beta.35"
+    "web3": "^1.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
