--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/torusresearch/torus-matic#readme",
   "devDependencies": {
-    "truffle": "^5.1.11"
+    "truffle": "^5.1.11",
+    "truffle-hdwallet-provider": "^1.0.17",
+    "truffle-privatekey-provider": "^1.3.0"
   }
 }
